# takehome

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.rust.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
rust-service/: Cargo.toml  Dockerfile  README.md
rust-service/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  processor.rs  reports.rs  routes.rs
sql/: schema.sql
src/: config.ts  domain.ts  index.ts  processor.ts  validation.ts
src/auth/: hmac.ts
src/db/: migrate.ts  pool.ts  transaction.ts
src/http/: app.ts
src/reports/: rtp-outbox.ts  rtp.ts
src/scripts/: benchmark-compare.ts  benchmark.ts  rtp-rollup-worker.ts  rtp-runner.ts  seed.ts
tests/: acceptance.test.ts  auth.test.ts  concurrency.test.ts  helpers.ts  reporting.test.ts  rtp-outbox.test.ts  schema.test.ts
